welcome.lessons.welcome.bat.bool2.In1To10.scala.error
in1To10:3: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
{return (x>=1 && x<=10)}
 ^