welcome.lessons.welcome.bat.bool2.In1To10.scala.code
def in1To10(n:Int, outsideMode:Boolean):Boolean = {
def cond (x:Int):Boolean
{return (x>=1 && x<=10)}

if (outsideMode) {return !cond (n)}
else {return cond (n)}
}